polychem/src/snapshots/polychem__chemical_database__tests__decimal_from_bool.snap
---
source: polychem/src/chemical_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × expected a decimal number, found boolean
   ╭─[test:1:10]
 1 │ lossless true
   ·          ──┬─
   ·            ╰── unsupported value
   ╰────

