polychem/src/snapshots/polychem__chemical_database__tests__element_without_isotopes.snap
---
source: polychem/src/chemical_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × at least one child node `isotope` is required
   ╭─[test:1:1]
 1 │ ╭─▶ D "Deuterium" {
 2 │ │     // isotope 2 2.01410177812 1
 3 │ ├─▶ }
   · ╰──── node starts here
   ╰────

